visual fixes and alignment

--- a/src/style-config/base-colors.scss
+++ b/src/style-config/base-colors.scss
@@ -15,6 +15,7 @@ $grey-dark-blue-20:          #D8D9DC !default;
 $grey-dark-blue-15:          #E2E3E5 !default;
 $grey-dark-blue-10:          #EBECED !default;
 $grey-dark-blue-5:           #F5F6F7 !default;
+$grey-shadow:                 #021224 !default;
 
 // Red
 $red:                        #D63F40 !default;
