--- a/src/components/pod/pod.scss
+++ b/src/components/pod/pod.scss
@@ -82,7 +82,7 @@
 }
 
 .carbon-pod__block--tile {
-  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 3px 0 rgba($grey-shadow, 0.2);
 }
 
 .carbon-pod__edit-action--padding-extra-small .carbon-icon__svg--edit {
